# timemann

./: Cargo.toml  README.md
assets/: logo.txt
src/: about_tab.rs  app.rs  colors.rs  countdown_tab.rs  eve.rs  fps.rs  main.rs  msg.rs  splash.rs  states.rs  stopwatch_tab.rs  tabs.rs  timer.rs  tui.rs  ui.rs
