[package]
name = "timemann"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.27.0"
tui-big-text = "0.4.5"
tokio = { version = "1", features = ["full"] }
strum = "0.26.3"
futures = "0.3.30"
itertools = "0.13.0"
ratatui-splash-screen = "0.1.3"
notify-rust = "4"